# opencv_learning_record

./: CMakeLists.txt  README.md  main.cpp  readme.txt
HOG_test/: HOG_test.cpp
LUT/: lut_test.cpp
calibrateCamera/: cc.cpp  main.cpp
calibrateCamera/images/: calibdata.txt  caliberation_result.txt
calibrateCamera/images2/: caliberation_result.txt
canny/: canny_copyto_test.cpp  canny_test.cpp
contours/: change_color.cpp  main.cpp
convex/: convexHull_test.cpp
ex2/: ex2-2_test.cpp
ex4/: test1.cpp
ex4/images/: image_name.txt
ex5/: test.cpp  test1.cpp  test2.cpp
ex6/: test1.cpp
floodFill/: floodFill_test.cpp
highgui/: setMouseCallBack_test.cpp
histogram/: calcHist_test.cpp  equalizeHist_test.cpp
matrix_operate/: multiplication.cpp  rotation.cpp
morphology/: main.cpp
openCVDemo1/: main.cpp
opencv_test10/: main.cpp
opencv_test11/: main.cpp
opencv_test12/: main.cpp
opencv_test13/: main.cpp
opencv_test14/: main.cpp
opencv_test16/: main.cpp
opencv_test17/: main.cpp
opencv_test18/: main.cpp
opencv_test20/: main.cpp
opencv_test21/: main.cpp
opencv_test23/: main.cpp
opencv_test24/: main.cpp
opencv_test25/: main.cpp
opencv_test26/: main.cpp
opencv_test27/: main.cpp
opencv_test28/: main.cpp
opencv_test29/: main.cpp
opencv_test30/: main.cpp
opencv_test31/: main.cpp
opencv_test5/: main.cpp
opencv_test6/: main.cpp
opencv_test7/: main.cpp
opencv_test8/: main.cpp
test/: CMakeLists.txt  main.cpp
test2/: CMakeLists.txt  main.cpp
test3/: CMakeLists.txt  main.cpp
vedio_capture/: Capture.cpp
(+1 files in other folders)
